fixed not showing arrow on selected member bill-info-popup

--- a/AngularProject/src/app/bill-info-popup/bill-info-popup.component.scss
+++ b/AngularProject/src/app/bill-info-popup/bill-info-popup.component.scss
@@ -68,6 +68,7 @@
 .shares-container {
   overflow-x: scroll;
   display: -webkit-box;
+  padding-top: 20px;
 }
 
 .participant.selected:before {
